--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=stemi-hexapod by STEMI
 version=2.0.0
-author=Luka Fucek (luka@stemi.education)
+author=STEMI (info@stemi.education)
 maintainer=Luka Fucek (luka@stemi.education)
-sentence=A library that makes controlling STEMI HEXAPOD v2 easy.
-paragraph=Cool library.
-category=Display
+sentence=Library for controlling STEMI Hexapod v2.
+paragraph=Includes drivers for BLE, servo, battery and everything else required to control STEMI hexapod robot.
+category=Device Control
 url=https://stemi.education
 architectures=*
