--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
-name=stemi-hexapod by STEMI
-version=2.0.1
+name=stemi-hexapod
+version=2.0.2
 author=STEMI (info@stemi.education)
 maintainer=Luka Fucek (luka@stemi.education)
 sentence=Library for controlling STEMI Hexapod v2.
