--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=stemi-hexapod
-version=2.0.10
+version=3.0.0
 author=STEMI (info@stemi.education)
-maintainer=Luka Fucek (luka@stemi.education)
-sentence=Library for controlling STEMI Hexapod v2.
+maintainer=Luka Dumančić (luka.dumancic@stemi.education)
+sentence=Library for controlling STEMI Hexapod v3.
 paragraph=Includes drivers for BLE, servo, battery and everything else required to control STEMI hexapod robot.
 category=Device Control
 url=https://stemi.education
